--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="col-lg-4">
                     <div class="about-image-part wow fadeInUp delay-0-3s">
                         <img src="assets/images/about/2.jpg" alt="About Me" />
-                        <h2>Vinay Joshi</h2>
+                        <h2>Vinay Bhau</h2>
                         <p>I am a Graphic & UI UX Designer based in Surat (India).</p>
                         <div class="about-social text-center">
                             <ul>
